--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -3,4 +3,4 @@ theme :
   name : twitter
 ---
 -{% include JB/setup %}
--{% include themes/twitter/post.html %}
+-{% include themes/twitter/default.html %}
